more classes to handle dimension reduction